<resources>
    <string name="app_name">Mis Lugares</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">Acerca de...</string>
    <string name="action_search">Buscar</string>
    <string name="action_test">Test</string>

    <string name="button_show">Mostrar Lugares</string>
    <string name="button_config">Preferencias</string>
    <string name="button_about">Acerca de</string>
    <string name="button_exit">Salir</string>

    <string name="edit_name">Nombre:</string>
    <string name="edit_hint_name">Algo que identifique al lugar</string>
    <string name="edit_tipo">Tipo:</string>
    <string name="edit_direcccion">Dirección:</string>
    <string name="edit_hint_direccion">Dirección del lugar</string>
    <string name="edit_phone">Teléfono:</string>
    <string name="edit_hint_phone">Teléfono de contacto</string>
    <string name="edit_web">Web:</string>
    <string name="edit_hint_web">Pagina web</string>
    <string name="edit_coment">Comentario:</string>
    <string name="edit_save">GUARDAR</string>
    <string name="edit_cancel">CANCELAR</string>
    <string name="edit_hint_coment">Introduce tus notas</string>
    <string name="title_activity_acerca_de">Acerca de...</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_test2">Test2Activity</string>
    <string name="title_activity_vista_lugar">VistaLugarActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edicion_lugar">EdicionLugarActivity</string>
    <string name="title_activity_testgoogle_maps">TESTGoogleMapsActivity</string>
    <string name="title_activity_mapa">MapaActivity</string>

</resources>
