<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_name"
            android:textAppearance="@style/EditTitle"/>
        <EditText
            android:id="@+id/edit_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_tipo"
                    android:textAppearance="@style/EditTitle"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tipo"></Spinner>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_direcccion"
            android:textAppearance="@style/EditTitle"/>
        <EditText
            android:id="@+id/edit_direccion"
            android:inputType="textPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_direccion"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_phone"
                    android:textAppearance="@style/EditTitle"/>
                <EditText
                    android:id="@+id/edit_phone"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_hint_phone"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_web"
            android:textAppearance="@style/EditTitle"/>
        <EditText
            android:id="@+id/edit_web"
            android:inputType="textUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_web"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_coment"
            android:textAppearance="@style/EditTitle"/>
        <EditText
            android:id="@+id/edit_coment"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_coment"/>

        </LinearLayout>
</ScrollView>