<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.jjprada.mislugares.EdicionLugarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_name"
            android:textAppearance="@style/EditTitle"/>
        <EditText
            android:id="@+id/edit_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_tipo"
                android:textAppearance="@style/EditTitle"/>
            <Spinner
                android:id="@+id/edit_tipo_lugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_direcccion"
            android:textAppearance="@style/EditTitle"/>
        <EditText
            android:id="@+id/edit_direccion"
            android:inputType="textPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_direccion"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_phone"
                android:textAppearance="@style/EditTitle"/>
            <EditText
                android:id="@+id/edit_phone"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_hint_phone"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_web"
            android:textAppearance="@style/EditTitle"/>
        <EditText
            android:id="@+id/edit_web"
            android:inputType="textUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_web"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_coment"
            android:textAppearance="@style/EditTitle"/>
        <EditText
            android:id="@+id/edit_coment"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_coment"/>

    </LinearLayout>
</ScrollView>
