<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".MainActivity"
              android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_margin="@dimen/small"/>

    <Button
        android:id="@+id/button_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_show"
        android:onClick="mostrarPreferencias"/>

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_config"/>

    <Button
        android:id="@+id/button_acerca_de"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_about"/>

    <Button
        android:id="@+id/button_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_exit"/>

</LinearLayout>
