<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:icon="@android:drawable/ic_menu_preferences"
          android:orderInCategory="5"
          app:showAsAction="never"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="90"
        app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@android:drawable/ic_menu_search"
          android:orderInCategory="115"
          app:showAsAction="always|collapseActionView"/>

    <item android:title="Mapa"
          android:id="@+id/action_mapa"
          android:icon="@android:drawable/ic_menu_myplaces"
          android:orderInCategory="100"
          app:showAsAction="always"/>

    <item android:id="@+id/action_test"
          android:title="@string/action_test"
          android:icon="@android:drawable/ic_dialog_alert"
          android:orderInCategory="125"
          app:showAsAction="never"/>
</menu>
